--- a/src/app/components/admindash/admindash.component.html
+++ b/src/app/components/admindash/admindash.component.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<form action="" method="">
 		<h1>Medcall Panel
-			<small>Medicine leaf/card</small>
+			<small style="color: black;">Current Credit Score : {{sscore}}</small>
 		</h1>
 		
 		<div class='input-control'>
@@ -19,8 +19,8 @@
 				<label for="imageUpload"></label>
 			</div>
 			<div class="avatar-preview">
-				<div id="imagePreview" style="background-image: url();">
-					<img src="{{ImageBaseData}}" height="180" width="180" alt="">
+				<div id="imagePreview">
+					<img src="{{ImageBaseData}}" height="180" width="180">
 				</div>
 			</div>
 		</div>
@@ -28,10 +28,27 @@
 	
 	<div class="hero">
 		<div class="card-container">
-			<button type="button" class="btn btn-danger pull-left" style="margin-left: 10px;" (click)="editProficPic()">Upload</button> 
+			<button href="#myModal" data-toggle="modal" type="button" class="btn btn-danger pull-left" style="margin-left: 10px;" (click)="editProficPic()">Upload</button> 
 		</div>
 	</div>
-		
 	</form>
 	</div>
+	<div id="myModal" class="modal fade">
+		<div class="modal-dialog modal-confirm">
+			<div class="modal-content">
+				<div class="modal-header">
+					<div class="icon-box">
+						<i class="material-icons">&#xE876;</i>
+					</div>				
+					<h4 class="modal-title w-100">Awesome!</h4>	
+				</div>
+				<div class="modal-body">
+					<p class="text-center">Good work taking your medicine today!! Keep it up!</p>
+				</div>
+				<div class="modal-footer">
+					<button class="btn btn-success btn-block" data-dismiss="modal">OK</button>
+				</div>
+			</div>
+		</div>
+	</div> 
 </body>
