--- a/src/app/components/admindash/admindash.component.html
+++ b/src/app/components/admindash/admindash.component.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<form action="" method="">
 		<h1>Medcall Panel
-			<small style="color: black;">Current Credit Score : {{sscore}}</small>
+			<small style="color: black;font-weight: bold;">Current Credit Score : {{sscore}}</small>
 		</h1>
 		
 		<div class='input-control'>
