--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -97,10 +97,7 @@
 	                        <p class="hero-paragraph">Your Perfect reminder now at your fingertips</p>
 							<div class="hero-form field field-grouped">
 								<div class="control">
-									<a class="button button-primary button-block" routerLink="/signup">Signup</a>
-								</div>
-								<div class="control">
-									<a class="button button-primary button-block" routerLink="/login">Login</a>
+									<a class="button button-primary button-block" routerLink="/admins/post">Admin Checkboard</a>
 								</div>
 							</div>
 						</div>
